syntax = "proto3";

option go_package = "github.com/cluttrdev/gitlab-exporter/protobuf/typespb";

package gitlabexporter.protobuf;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

import "gitlabexporter/protobuf/references.proto";

message Pipeline {
    int64 id = 1;
    int64 iid = 2;
    ProjectReference project = 3;

    string name = 4;
    string ref = 5;
    string ref_path = 6;
    string sha = 7;
    string source = 8;
    string status = 9;
    string failure_reason = 10;

    PipelineTimestamps timestamps = 11;

    google.protobuf.Duration queued_duration = 12;
    google.protobuf.Duration duration = 13;
    double coverage = 14;

    bool warnings = 15;
    bool yaml_errors = 16;

    bool child = 17;
    optional PipelineReference upstream_pipeline = 18;

    optional MergeRequestReference merge_request = 19;

    UserReference user = 20;
}

message PipelineTimestamps {
    google.protobuf.Timestamp committed_at = 1;
    google.protobuf.Timestamp created_at = 2;
    google.protobuf.Timestamp updated_at = 3;
    google.protobuf.Timestamp started_at = 4;
    google.protobuf.Timestamp finished_at = 5;
}
